bin/tests/snapshots/collapsible_inherits__47f1b433f5a83b6476445f0ea94b0035_lint_errfmt.snap
---
source: bin/tests/collapsible_inherits.rs
---
{
  inherit (pkgs) foo;

  inherit (pkgs) bar;
}
---
