bin/tests/snapshots/collapsible_inherits__5fefc1ec147169d52983a22de0d4dfe1_fix.snap
---
source: bin/tests/collapsible_inherits.rs
---
{
  inherit (pkgs) foo;
  name = "x";
  inherit (pkgs) bar;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,6 @@
 {
   inherit (pkgs) foo;
+
   name = "x";
   inherit (pkgs) bar;
 }
