bin/tests/snapshots/collapsible_inherits__5fefc1ec147169d52983a22de0d4dfe1_lint_errfmt.snap
---
source: bin/tests/collapsible_inherits.rs
---
{
  inherit (pkgs) foo;
  name = "x";
  inherit (pkgs) bar;
}
---
<temp_file_path>>3:3:W:36:[inherit_blank_line] a blank line should follow the `inherit` above
<temp_file_path>>4:3:W:38:[inherit_first] `inherit` should come before the assignments above it
