bin/tests/snapshots/collapsible_inherits__5fefc1ec147169d52983a22de0d4dfe1_lint_stderr.snap
---
source: bin/tests/collapsible_inherits.rs
---
{
  inherit (pkgs) foo;
  name = "x";
  inherit (pkgs) bar;
}
---
[inherit_blank_line] Warning: No blank line after `inherit`
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │   name = "x";
   │   ─────┬─────  
   │        ╰─────── a blank line should follow the inherit above
───╯
