bin/tests/snapshots/collapsible_inherits__7215fcab22e4cc0a550108c8282da864_lint_json.snap
---
source: bin/tests/collapsible_inherits.rs
---
{
  inherit (pkgs) foo;
  inherit (pkgs)
    # why the exception
    bar;
}
---
