bin/tests/snapshots/collapsible_inherits__92633c3dadd2447af8881dcdb7f4441e_lint_stderr.snap
---
source: bin/tests/collapsible_inherits.rs
---
{
  inherit (pkgs) foo;
  # why the exception
  inherit (pkgs) bar;
}
---
