bin/tests/snapshots/collapsible_inherits__95871e8d143bf06771430823ce0622a8_fix.snap
---
source: bin/tests/collapsible_inherits.rs
---
{
  inherit foo;
  inherit bar;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,4 +1,3 @@
 {
-  inherit foo;
-  inherit bar;
+  inherit bar foo;
 }
