bin/tests/snapshots/collapsible_inherits__95871e8d143bf06771430823ce0622a8_lint_errfmt.snap
---
source: bin/tests/collapsible_inherits.rs
---
{
  inherit foo;
  inherit bar;
}
---
<temp_file_path>>3:3:W:37:[collapsible_inherits] These consecutive `inherit` statements can be merged into one
