bin/tests/snapshots/collapsible_inherits__95871e8d143bf06771430823ce0622a8_lint_json.snap
---
source: bin/tests/collapsible_inherits.rs
---
{
  inherit foo;
  inherit bar;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "collapsible_inherits",
      "note": "Consecutive inherit statements are collapsible",
      "code": 37,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 15
            }
          },
          "message": "These consecutive `inherit` statements can be merged into one",
          "suggestion": {
            "at": {
              "from": {
                "line": 2,
                "column": 3
              },
              "to": {
                "line": 3,
                "column": 15
              }
            },
            "fix": "inherit foo bar;"
          }
        }
      ]
    }
  ]
}
