bin/tests/snapshots/collapsible_inherits__95871e8d143bf06771430823ce0622a8_lint_stderr.snap
---
source: bin/tests/collapsible_inherits.rs
---
{
  inherit foo;
  inherit bar;
}
---
[collapsible_inherits] Warning: Consecutive inherit statements are collapsible
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │   inherit bar;
   │   ──────┬─────  
   │         ╰─────── These consecutive inherit statements can be merged into one
───╯
