bin/tests/snapshots/collapsible_inherits__a5e3316c7f3f4d342d7ac760b33f7bc1_fix.snap
---
source: bin/tests/collapsible_inherits.rs
---
{
  inherit (pkgs) foo;
  inherit (pkgs) bar;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,4 +1,3 @@
 {
-  inherit (pkgs) foo;
-  inherit (pkgs) bar;
+  inherit (pkgs) bar foo;
 }
